# HackaDataFusion

./: .env  .gitignore  PRD.md  README.md  pyproject.toml
data/: README.md  processed_files.txt
docs/: data_warehouse_snowflake.sql  folder_structure.txt
mlruns/0/: meta.yaml
mlruns/0/16503df09c164f91a5be103b0345e834/: meta.yaml
mlruns/0/23538aef59f347218787016a98c99285/: meta.yaml
mlruns/0/3c996a5d239e4b2595871f73ba8e50cc/: meta.yaml
mlruns/0/821cbc1f1fab43589ece807ca828c92a/: meta.yaml
mlruns/0/950ee2072bb44d4b85739f9a4b9a03ec/: meta.yaml
mlruns/0/d284623f02bd45e0b4bbe7927c2106a7/: meta.yaml
mlruns/0/e41c1c0a910b4d319b86184bcd7af0a6/: meta.yaml
mlruns/0/f7a7bdbb5b1e4f60ae983f701fa6ddcc/: meta.yaml
notebooks/: README.md  clustering_gold_no_pca.ipynb
src/: README.md
src/config/: example.py  pipeline_config.yaml  snowflake_config.py
src/data_flow/: README.md
src/data_flow/data_preprocessing/: bronze.py  bronze_processor.py  gold.py  gold_processor.py  silver.py  silver_processor.py
src/data_flow/download/: download.py
src/data_flow/models/: config.py  evaluate.py  features.py  init.py  models.py  train.py
src/data_flow/storage/: connect_s3_to_snowflake.py  s3_processed_upload.py  s3_upload.py
src/dbt/github_analytics/: .user.yml  README.md  dbt_project.yml  profiles.yml  sources.yml
src/pipeline/: README.md  ingest_pipeline.py  main_pipeline.py  medalion_pipeline.py  model_pipeline.py
src/pipeline/clustering/: config.py  evaluate.py  (+4 more)
src/scripts/: __init__.py  data_catalog.py  data_validation.py
src/utils/: pipeline_diagnostics.py
(+56 files in other folders)
