[project]
name = "hackadatafusion"
version = "0.1.0"
description = ""
authors = [
    {name = "andresariasme",email = "andres.ariasm@upb.edu.co"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "boto3 (>=1.38.8,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "snowflake-connector-python (>=3.15.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "dbt-snowflake (>=1.9.4,<2.0.0)",
    "pyarrow (<19.0.0)",
    "humanize (>=4.12.3,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "mlflow (>=2.22.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

